# obs-copilot

./: .env  .env.example  .env.local.example  .eslintrc.cjs  .eslintrc.js  .eslintrc.json  .gemini-context.md  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  CODE_REVIEW_AND_IMPROVEMENT_ANALYSIS.md  CRITICAL_FIXES_IMPLEMENTATION_SUMMARY.md  GEMINI_CHAT_DECOMPOSITION_PLAN.md  GEMINI_SDK_MIGRATION_SUMMARY.md  LICENSE  Pipfile  README.md  SECURITY_FIXES_IMPLEMENTATION_PLAN.md  SECURITY_FIXES_IMPLEMENTATION_SUMMARY.md  THEMING_GUIDE.md  api-config.js  appmap.yml  audit-ci.json  babel.config.cjs  check_fastapi.sh  env-template.txt  eslint.config.js  genai.md  index.html  jest.config.cjs  jest.config.js  jest.setup.env.js  jest.setup.js  jest.setup.ts  metadata.json  model.tflite  netlify.toml  obs-control-panel-plan.md  (+29 more)
.github/: copilot-instructions.md
.github/workflows/: ci-cd.yml  ci.yml
.kilocode/: mcp.json
.serena/: README.md  config.json  project.yml
__mocks__/: zustand.ts
__tests__/: ConnectionForm.test.tsx  proxy.integration.test.cjs  proxy.integration.test.js  proxy.integration.test.mjs  proxy.unit.test.cjs  proxy.unit.test.js  validations.test.ts
__tests__/__mocks__/: node-fetch.js
__tests__/mocks/: constants.js  mockFetch.js  node-fetch.js  rawFile.js  tm-themes.js
backend/: .gitignore  Pipfile  auth.py  config.py  main.py  middleware.py  openapi.json  pyproject.toml  rate_limiter.py  requirements.txt  searchKnowledgeBase.ts  test_sdk.py
backend/api/: models.py
backend/api/routes/: assets.py  gemini.py  health.py  knowledge.py  overlays.py  proxy_7tv.py  proxy_emotes.py
backend/config/: cors.py  settings.py  validation.py
backend/middleware/: __init__.py  timeout.py
backend/models/: validation.py
backend/services/: __init__.py  gemini_cache_service.py  gemini_client.py  gemini_service.py  obs_client_stub.py  obs_context_service.py
backend/tests/: test_assets.py  test_gemini.py  test_generate_content.py  test_knowledge.py  test_main.py  test_middleware.py  test_orchestrator.py
backend/utils/: cacheManager.py  error_handlers.py
data/locale/: en-US.ini
dist-node/: proxy.cjs  tsconfig.node.tsbuildinfo  verify-proxy.js
dist-node/src/: App.js  HomePage.d.ts  HomePage.js  config.d.ts  config.js  constants.d.ts  (+4 more)
docs/: DESIGN_SYSTEM.md  GEMINI_AUDIO.md  KNOWLEDGE_BASE.md  PATH_ALIASES.md  obs-action-migration.md  plugin-development.md
memory_bank/: README.md
public/: _headers
scripts/: backend-dev.js  backend-preflight.js  backend_setup.cjs  consolidate-types.cjs  consolidate-types.js  dev-backend.sh  dev-frontend.sh  fix-glob-imports.cjs  fix-glob-imports.js  fix-tailwind-issues.cjs  fix-tailwind-issues.js  generate-openapi.py  run_dev.sh  setup_backend.js  setup_backend.sh  setup_dev.sh
src/: App.minimal.tsx  App.tsx  HomePage.css  HomePage.tsx  config.ts  constants.ts  copilot-dock.cpp  copilot-dock.h  copilot-service.cpp  copilot-service.h  copilot-source.cpp  copilot-source.h  index.css  index.tsx  main.css  main.tsx  obs-copilot-plugin.cpp  polyfills.ts  router.tsx  themes.ts  types.ts  vite-env.d.ts  vite-middleware.ts  vite.d.ts
tailwind/: animations.js  keyframes.js
tutorial/: 01_obs_websocket_service_.md  02_core_data_types_.md  03_application_orchestration_.md  04_ui_component_library_.md  05_theming_system___styling_.md  06_markdown___special_effect_rendering_.md  07_ai_chat_interface___processing_.md  08_application_state_management_.md  09_obs_action_handling_.md  10_settings_persistence_.md  index.md
(+950 files in other folders)
