[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.poetry]
name = "backend"
version = "0.1.0"
description = "FastAPI backend for the application"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = "*"
python-dotenv = "*"
fastapi-mcp = "*"
google-genai = ">=1.31.0"
google-api-core = "*"
google-generativeai = "*"
websockets = ">=12.0"
pydantic = ">=2.0.0"
structlog = "*"
uvicorn = {version = "*", extras = ["standard"]}
pydantic-settings = ">=2.0.0"
aioredis = ">=2.0.0"
slowapi = ">=0.1.9"
aiohttp = ">=3.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
httpx = "*"
