[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

[tool.poetry]
name = "obs-copilot-backend"
version = "0.1.0"
description = "FastAPI backend for OBS Copilot with Gemini AI integration"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
python-dotenv = "*"
fastapi-mcp = "*"
google-genai = ">=1.31.0"
websockets = ">=12.0"
pydantic = ">=2.0.0"
structlog = "*"
pydantic-settings = ">=2.0.0"
aioredis = ">=2.0.0"
slowapi = ">=0.1.9"
aiohttp = ">=3.9.0"
python-magic = "*"
opencv-python-headless = "*"
numpy = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
httpx = "*"
psutil = "*"
